<resources>
    <string name="app_name">NewsAppOne</string>
    <string name="content_is_not_available">Content is not available</string>
    <string name="todo">TODO</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="published_at">Published At</string>
    <string name="title">title</string>
</resources>
