<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyPresenter.DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="NewsAppOne"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:background="@drawable/linear_layout_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center|start"
                    android:maxLines="8"
                    android:minLines="2"
                    android:text="@string/title"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/detailImage"
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:background="@drawable/rounded_corner_imageview"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/linear_layout_background_border"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="10sp"
                            tools:ignore="NestedWeights">

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/author"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/dAuthor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:maxLines="6"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="10sp">

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/description"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/dDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:maxLines="10"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="10sp">

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/content"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/dcontent"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:maxLines="10"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="10sp">

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/published_at"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/dPublished"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:maxLines="6"/>
                        </LinearLayout>

                    </LinearLayout>




                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>